Update CARACTER rule.